# AImind

./: .claudecode.toml  .gitignore  CONNECTION_FIX.md  EDITOR_TEST_CHECKLIST.md  ERROR_LOG.md  Filename_Issue_Solution.md  NODE_EDIT_FINAL_FIX.md  README.md  SERVER_FEATURES.md  TOOLBAR_FEATURES_CHECK.md  USER_GUIDE.md  fix-filenames.sh  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.husky/: pre-commit
docs/: CHECKLIST.md  EDITING_STATE_BUG_PREVENTION.md  GITHUB_SETUP_GUIDE.md  PROJECT_CLEANUP_REPORT.md
docs/archive/: CHINESE_INPUT_FIX.md  FILE_NAMING_CONVENTIONS.md  NODE_EDIT_FIX.md  test-verification.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai.rs  config.rs  file.rs  mod.rs
src-tauri/src/models/: config.rs
src-tauri/src/services/: ai_client.rs  mod.rs
src/components/ai/: AIPanel.tsx  AIProviderSelector.tsx  index.ts
src/components/common/: Button.tsx  ContextMenu.tsx  Input.tsx  Modal.tsx  RecentFiles.tsx  Select.tsx  ServerFiles.tsx  Toast.tsx  VersionHistory.tsx
src/components/dialogs/: ExportDialog.tsx  SettingsDialog.tsx  index.ts
src/components/guide/: KeyboardShortcuts.tsx  (+1 more)
src/hooks/: useAI.ts  useAIAgent.ts  useAutoSave.ts  useHistoryRecorder.ts  useShortcuts.ts  useTheme.ts  useToast.ts  useWebSearch.ts
src/lib/: utils.ts
src/stores/: aiStore.ts  configStore.ts  historyStore.ts  mindmapStore.ts  webSearchStore.ts
src/types/: ai.ts  config.ts  index.ts  mindmap.ts
(+29 files in other folders)
